--- a/public/app/partials/profile/mylisting.html
+++ b/public/app/partials/profile/mylisting.html
@@ -1,5 +1,5 @@
 <!-- Static navbar -->
-<nav class="navbar navbar-default" id="navContainer">
+<nav class="navbar navbar-default hidden-xs" id="navContainer">
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li>
@@ -37,6 +37,12 @@
         </ul>
     </div>
 </nav>
+
+<div class="col-md-2 user-menu-btns visible-xs" ng-include src='"partials/profile/profileLeftMenu.html"'>
+    
+</div>
+
+
 <div class="col-md-12">
     <div class="row user-menu-container square">
         <!-- <div class="row cover-section custom-profile-covers">
@@ -57,16 +63,15 @@
                      class="img-responsive thumbnail"/>
             </div>
         </div> -->
-        <div class="col-md-12 user-details">
-            <div class="row coralbg white custom-profile-userpic">
-                <div class="col-md-3 top-margin">
+        <div class="col-md-12 col-xs-12 no-padding user-details">
+            <div class="col-md-12 col-xs-12 no-padding coralbg white">
+                <div class="col-md-3 col-xs-4 top-margin">
                     <div class="user-image biothumb">
                         <img ng-src="{{currentProfileImage}}" src="http://placehold.it/293x220"
                              class="img-responsive thumbnail" />
                     </div>
                 </div>
-
-                <div class="col-md-9 no-pad">
+                <div class="col-md-9 col-xs-8 no-pad">
                     <div class="user-pad-profile">
                         <!--name-->
                         <h3 style="text-transform: capitalize;">{{ firstname }} {{ lastname }}</h3>
@@ -81,23 +86,22 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
+                    <div class="row hidden-xs" ng-include='"partials/profile/userProfileCount.html"'></div>
                 </div>
             </div>
-
-            <div class="col-md-12"  id="view">
+            <div class="col-md-12 col-xs-12"  id="view">
                 <h3>About Me</h3>
                 <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
             </div>
 
         </div>
 
-        <div class="col-md-2 user-menu-btns" ng-include src='"partials/profile/profileLeftMenu.html"'>
+        <div class="col-md-2 user-menu-btns hidden-xs" ng-include src='"partials/profile/profileLeftMenu.html"'>
             
         </div>
 
         <!--For Member-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role != 1 && loggedInUserId == currentUserId">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-if="Role != 1 && loggedInUserId == currentUserId">
             <div class="col-md-12 col-xs-12">
                 <div class="col-md-12 col-xs-12 empty-section text-center">
                     <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
@@ -113,8 +117,8 @@
         </div>
 
         <!--For Admin-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role == 1 && loggedInUserId == currentUserId">
-            <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-if="Role == 1 && loggedInUserId == currentUserId">
+            <div class="col-md-12 panel-heading hidden-xs" style="padding-left: 0px;padding-right: 0px;">
 		        <div class="fragment">
 		            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
 		            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Ads & Campaigns</h4>
@@ -124,10 +128,10 @@
 		        </div>
 			</div>
 
-            <div class="col-md-12">
-                <div class="row" style="margin-bottom: 40px">
-                    <div class="col-md-12 user-menu user-pad" ng-controller="classifiedProfileCtrl">
-                        <div class="col-md-3 col-md-offset-4 pull-right" style="margin-top:10px;margin-bottom:10px;padding:0px;">
+            <div class="col-md-12 col-xs-12 no-padding">
+                <div class="col-md-12 col-xs-12 no-padding" style="margin-bottom: 40px">
+                    <div class="col-md-12 col-xs-12 user-menu user-pad" ng-controller="classifiedProfileCtrl">
+                        <div class="col-md-3 col-xs-8 col-md-offset-4 pull-right" style="margin-top:10px;margin-bottom:10px;padding:0px;">
                             <a href="#classifieds/create/step1" class="btn btn-primary"><span class="fa fa-plus"></span> Create Ads & Campaigns</a>
                         </div>
                         <!--No campaigns-->
@@ -140,7 +144,7 @@
                         <div class="empty-section text-center" ng-hide="browseItems.length > 0">
                             <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false"></span>
                         </div>
-                        <div class="browse-items">
+                        <div class="browse-items col-xs-12 no-padding">
                             <div class="row">
                                 <div class="col-md-12" ng-repeat="item in browseItems">
                                     <div class="browse-item">
@@ -170,8 +174,8 @@
         </div>
 
         <!--For Visiting friends profile-->
-        <div class="col-md-10 user-menu user-pad" ng-if="loggedInUserId != currentUserId">
-            <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-if="loggedInUserId != currentUserId">
+            <div class="col-md-12 panel-heading hidden-xs" style="padding-left: 0px;padding-right: 0px;">
                 <div class="fragment">
                     <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
                     <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Ads & Campaigns</h4>
@@ -181,7 +185,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12 col-xs-12">
                 <div class="row" style="margin-bottom: 40px">
                     <div class="col-md-12 user-menu user-pad" ng-controller="classifiedProfileCtrl">
                         <!--No campaigns-->
