--- a/public/app/partials/profile/mystores.html
+++ b/public/app/partials/profile/mystores.html
@@ -1,5 +1,5 @@
 <!-- Static navbar -->
-<nav class="navbar navbar-default" id="navContainer">
+<nav class="navbar navbar-default hidden-xs" id="navContainer">
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li>
@@ -37,45 +37,63 @@
         </ul>
     </div>
 </nav>
-<div class="col-md-12">
-    <div class="row user-menu-container square">
-        <div class="row cover-section custom-profile-covers">
-            <div class="col-md-4 small-cover-pic">
+
+<div class="col-md-2 user-menu-btns visible-xs" ng-include src='"partials/profile/profileLeftMenu.html"'>
+    
+</div>
+
+<!-- <div class="col-md-12 no-padding">
+    <div class="col-md-4 small-cover-pic">
                 <div class="small-cover-pic-top">
                     <div>
                         <img ng-src="{{leftCoverImage}}" src="http://placehold.it/393x220"
                              class="img-responsive thumbnail"/>
-                        <!--<img ng-src="http://www.turquoiseandgold.com/images/store_bng1.jpg" class="img-responsive" alt=""/>-->
                     </div>
                 </div>
                 <div class="small-cover-pic-bottom">
                     <img ng-src="{{bottomCoverImage}}" src="http://placehold.it/393x220"
                          class="img-responsive thumbnail"/>
-                    <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-                    <!--class="img-responsive" alt=""/>-->
                 </div>
             </div>
-            <div class="col-md-8 large-cover-pic custom-user-right-coverpic">
+    <div class="col-md-8">
+        <img ng-src="{{rightCoverImage}}" src="http://placehold.it/803x452"
+                     class="img-responsive thumbnail"/>
+    </div>
+</div> -->
+
+<div class="col-md-12 col-xs-12">
+    <div class="row user-menu-container square">
+        <!--Profile covers-->
+        <div class="col-md-12 col-xs-12 cover-section">
+            <div class="col-md-4 col-xs-4 no-padding small-cover-pic">
+                <div class="small-cover-pic-top">
+                    <div>
+                        <img ng-src="{{leftCoverImage}}" src="http://placehold.it/393x220"
+                             class="img-responsive thumbnail"/>
+                    </div>
+                </div>
+                <div class="small-cover-pic-bottom">
+                    <img ng-src="{{bottomCoverImage}}" src="http://placehold.it/393x220"
+                         class="img-responsive thumbnail"/>
+                </div>
+            </div>
+            <div class="col-md-8 col-xs-8 no-padding large-cover-pic">
                 <img ng-src="{{rightCoverImage}}" src="http://placehold.it/803x452"
                      class="img-responsive thumbnail"/>
-                <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-                <!--class="img-responsive" alt=""/>-->
-                <!--<button class="btn btn-primary btn-sm btn-cover-pic-left"><span class="fa fa-camera"></span> Change Pic-->
-                <!--</button>-->
-
             </div>
         </div>
-        <div class="col-md-12 user-details">
-            <div class="row coralbg white custom-profile-userpic">
+        <!--Profile cover ends-->
 
-                <div class="col-md-3 top-margin">
+        <!--User Details-->
+        <div class="col-md-12 col-xs-12 no-padding user-details">
+            <div class="col-md-12 col-xs-12 no-padding coralbg white">
+                <div class="col-md-3 col-xs-4 top-margin">
                     <div class="user-image biothumb">
                         <img ng-src="{{currentProfileImage}}" src="http://placehold.it/293x220"
                              class="img-responsive thumbnail" />
                     </div>
                 </div>
-
-                <div class="col-md-9 no-pad">
+                <div class="col-md-9 col-xs-8 no-pad">
                     <div class="user-pad-profile">
                         <!--name-->
                         <h3 style="text-transform: capitalize;">{{ firstname }} {{ lastname }}</h3>
@@ -90,25 +108,22 @@
                             </h4>
                         </div>
                     </div>
-
-                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
-                    
+                    <div class="row hidden-xs" ng-include='"partials/profile/userProfileCount.html"'></div>
                 </div>
             </div>
-
-            <div class="col-md-12"  id="view">
+            <div class="col-md-12 col-xs-12"  id="view">
                 <h3>About Me</h3>
                 <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
             </div>
-
         </div>
+        <!--User Details Ends-->
 
-        <div class="col-md-2 user-menu-btns" ng-include src='"partials/profile/profileLeftMenu.html"'>
-            
+        <!--Profile left menu-->
+        <div class="col-md-2 user-menu-btns hidden-xs" ng-include src='"partials/profile/profileLeftMenu.html"'>
         </div>
 
         <!--For Member-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role == 2 && loggedInUserId == currentUserId">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-if="Role == 2 && loggedInUserId == currentUserId">
             <div class="col-md-12 col-xs-12">
                 <div class="col-md-12 col-xs-12 empty-section text-center">
                     <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
@@ -124,26 +139,29 @@
         </div>
 
         <!--For Business-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role != 2 && loggedInUserId == currentUserId">
-            <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
-		        <div class="fragment">
-		            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
-		            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Stores</h4>
-		            <p>
-		                If you own a business, products or services or both, want to start a new one, This is the place for you.  We have made it simple for you. You get all the tools to  create your web store and promote it, tab by tab fill in details. Arm yourself with real bright images, get your script and description in place before hand, Go with the flow.
-		            </p>
-		        </div>
-		    </div>
-            <div class="col-md-12 panel-heading">
-                <div class="col-md-2">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-if="Role != 2 && loggedInUserId == currentUserId">
+            <div class="col-md-12 panel-heading hidden-xs" style="padding-left: 0px;padding-right: 0px;">
+                <div class="fragment">
+                    <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+                    <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Stores</h4>
+                    <p>
+                        If you own a business, products or services or both, want to start a new one, This is the place for you.  We have made it simple for you. You get all the tools to  create your web store and promote it, tab by tab fill in details. Arm yourself with real bright images, get your script and description in place before hand, Go with the flow.
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-12 col-xs-12 panel-heading">
+                <div class="col-md-2 col-xs-6 no-padding">
                     <h4>
                         Stores ({{browseMyItems.length}})
                     </h4>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2 col-xs-6 visible-xs pull-right no-padding">
+                    <a href="#store/create/step1" class="btn btn-primary" style="font-size:10px;"><span class="fa fa-plus"></span> Create Store</a>
+                </div>
+                <div class="col-md-4 col-xs-12 no-padding">
                     <input type="text" class="form-control" placeholder="search stores" ng-model="storesearch"/>
                 </div>
-                <div class="col-md-2 col-md-offset-4 pull-right">
+                <div class="col-md-2 hidden-xs col-md-offset-4 pull-right no-padding">
                     <a href="#store/create/step1" class="btn btn-primary"><span class="fa fa-plus"></span> Create Store</a>
                 </div>
             </div>
@@ -156,7 +174,7 @@
                 <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false">
                 </span>
             </div>
-            <div class="browse-my-items">
+            <div class="browse-my-items col-xs-12">
                 <div class="row">
                     <div class="col-sm-12" ng-repeat="item in browseMyItems | filter:storesearch">
                         <div class="browse-item">
@@ -188,9 +206,10 @@
             </div>
         </div>
 
+
         <!--For visiting friends profile-->
-        <div class="col-md-10 user-menu user-pad" ng-if="loggedInUserId != currentUserId">
-            <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-if="loggedInUserId != currentUserId">
+            <div class="col-md-12 panel-heading hidden-xs" style="padding-left: 0px;padding-right: 0px;">
                 <div class="fragment">
                     <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
                     <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Stores</h4>
@@ -199,13 +218,13 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-12 panel-heading">
-                <div class="col-md-2">
+            <div class="col-md-12 col-xs-12 panel-heading">
+                <div class="col-md-2 col-xs-12">
                     <h4>
                         Stores ({{browseMyItems.length}})
                     </h4>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-xs-12">
                     <input type="text" class="form-control" placeholder="search stores" ng-model="storesearch"/>
                 </div>
             </div>
@@ -218,7 +237,7 @@
                 <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false">
                 </span>
             </div>
-            <div class="browse-my-items">
+            <div class="browse-my-items col-xs-12">
                 <div class="row">
                     <div class="col-sm-12" ng-repeat="item in browseMyItems | filter:storesearch">
                         <div class="browse-item">
