--- a/public/app/evezplace.css
+++ b/public/app/evezplace.css
@@ -421,7 +421,7 @@
 #evezplace-reco-title h5 {
     color: #ffffff;
     font-weight: 500;
-    font-size: 12pt;
+    font-size: 10pt;
 }
 
 #evezplace-reco-title a {
@@ -438,7 +438,7 @@
 #trending-products-title h5 {
     color: #ffffff;
     font-weight: 500;
-    font-size: 12pt;
+    font-size: 10pt;
 }
 
 #trending-products-title a {
@@ -772,7 +772,7 @@ input.ng-valid-required.ng-valid:not(.ng-invalid), textarea.ng-valid-required.ng
 
 .popover {
     max-width: none;
-    min-width: 350px;
+    min-width: 200%;
     /* If max-width does not work, try using width instead */
     border-radius: 0px;
 }
@@ -953,12 +953,108 @@ input.ng-valid-required.ng-valid:not(.ng-invalid), textarea.ng-valid-required.ng
 @media (max-width: 768px) {
 
     #left-promotion {
+    position: absolute;
     bottom: 0px;
+    top: 50%;
     left: 0px;
     right: 0px;
     opacity: 0.8;
-    padding: 10px;
+    padding: 5px;
     background: #ffffff;
+    }
+
+    #left-promotion p{
+        font-size:10px;
+        margin:2px;
+    }
+
+    #left-promotion a {
+    margin-top: 0px;
+    font-weight: 200;
+    }
+
+    #promotion-section .small-cover-pic-top
+    {
+        height: 50%;
+        margin-top: 8px;
+        overflow: hidden;
+    }
+
+    #promotion-section .small-cover-pic-bottom {
+        padding-top: 4px;
+        height: 50%;
+        overflow: hidden;
+    }
+
+    .right-top-promotion
+    {
+        position: absolute;
+        top: 10px;
+        left: 5px;
+        right: 5px;
+        opacity: 0.8;
+        padding: 5px;
+        background: #ffffff;
+    }
+
+    .right-top-promotion p
+    {
+        margin:0 0 5px;
+    }
+
+    .right-bottom-promotion {
+        position: absolute;
+        bottom: 2px;
+        left: 5px;
+        right: 5px;
+        opacity: 0.8;
+        padding: 5px;
+        background: #ffffff;
+    }
+
+    .right-bottom-promotion p
+    {
+        margin:0 0 5px;
+    }
+
+    #promotion-section .large-cover-pic {
+        padding-left: 0px;
+        padding-right: 2px;
+        margin-top: 8px;
+        overflow: hidden;
+        height:80%;
+    }
+
+    #btn-browse-store
+    {
+        background-color: #2D9DB8;
+        color: #ffffff;
+        text-align: left;
+        font-weight: 500;
+        font-size: 10px;
+        padding: 10px 20px;
+        margin-bottom: 2px;
+    }
+    #btn-browse-classifieds
+    {
+        background-color: #2F9673;
+        color: #ffffff;
+        text-align: left;
+        font-weight: 500;
+        font-size: 10px;
+        padding: 10px 20px;
+        margin-bottom: 2px;
+    }
+    .product-name p
+    {
+        font-size:10px;
+    }
+    .trending_desc .trending_title, .trending_desc .trending_title a {
+        font-weight: bolder;
+        font-size: 1.0em;
+        color: #000;
+        font-family: 'Raleway', sans-serif;
+        text-decoration: none;
     }
 
 }
