--- a/public/app/partials/evezplace/products_partial.html
+++ b/public/app/partials/evezplace/products_partial.html
@@ -2,10 +2,10 @@
     <div class="col-xs-12 evezplace-reco-products-section">
 
         <div class="col-md-12 col-xs-12" style="padding-left: 0px" id="evezplace-reco-title">
-            <div class="col-md-9 col-xs-8">
+            <div class="col-md-9 col-xs-6">
                 <h5>MarketPlace Recommendations </h5>
             </div>
-            <div class="col-md-3 col-xs-4" style="padding-right: 0px">
+            <div class="col-md-3 col-xs-6" style="padding-right: 0px">
                 <a href="" class="btn btn-link pull-right">Show All <span
                         class="fa fa-angle-right fa-2x pull-right"></span></a>
             </div>
@@ -24,7 +24,7 @@
                              class="img-responsive center-block">
                     </a>
                 </div>
-                <div class="col-md-12 col-xs-12 text-center">
+                <div class="col-md-12 col-xs-12 text-center no-padding product-name">
                     <p>{{recommendation.title}}</p>
                 </div>
             </div>
@@ -32,10 +32,10 @@
     </div>
     <div class="col-xs-12 trending-products-section">
         <div class="col-md-12 col-xs-12" style="padding-left: 0px" id="trending-products-title">
-            <div class="col-md-9 col-xs-8">
+            <div class="col-md-9 col-xs-6">
                 <h5>Trending This Month</h5>
             </div>
-            <div class="col-md-3 col-xs-4" style="padding-right: 0px">
+            <div class="col-md-3 col-xs-6" style="padding-right: 0px">
                 <!-- <a href="#store/products" class="btn btn-link pull-right">Show All <span
                         class="fa fa-angle-right fa-2x pull-right"></span></a> -->
                 <a href="" class="btn btn-link pull-right">Show All <span
@@ -56,7 +56,7 @@
                              class="img-responsive center-block">
                     </a>
                 </div>
-                <div class="col-md-12 col-xs-12 text-center">
+                <div class="col-md-12 col-xs-12 text-center no-padding product-name">
                     <p>{{trendingItem.title}}</p>
                 </div>
             </div>
