--- a/public/app/partials/profile/PromotionalToolMenu.html
+++ b/public/app/partials/profile/PromotionalToolMenu.html
@@ -1,7 +1,30 @@
-<div class="btn-group-vertical square" id="responsive" ng-controller="PromotionalMenuCtrl">
+<div class="btn-group-vertical square hidden-xs" id="responsive" ng-controller="PromotionalMenuCtrl">
     <a class="btn btn-block btn-default"
        ng-repeat="menuItem in PromotionalMenuItems" href="#/{{menuItem.link}}"
        ng-class="navClass('{{menuItem.link}}')">
         <p>{{ menuItem.name }}</p>
     </a>
+</div>
+
+<!--For mobile-->
+<div class="visible-xs" ng-controller="PromotionalMenuCtrl">
+	<nav role="navigation" class="navbar navbar-default" style="background-color:#FFFFFF;border-color:#FFFFFF;min-height:36px;margin-top:0px;margin-bottom:0px;">
+	    
+	    <div class="navbar-header">
+	        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle" style="margin:0px;">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	        </button>
+	    </div>
+	    
+	    <div id="navbarCollapse" class="collapse navbar-collapse">
+	        <ul class="nav navbar-nav">
+	            <li ng-repeat="menuItem in PromotionalMenuItems" ng-class="navClass('{{menuItem.link}}')">
+	                <a href="#/{{menuItem.link}}" >{{ menuItem.name }}</a>
+	            </li>
+	        </ul>
+	    </div>
+	</nav>
 </div>
