--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -1,5 +1,5 @@
 <!-- Static navbar -->
-<nav class="navbar navbar-default" id="navContainer">
+<nav class="navbar navbar-default hidden-xs" id="navContainer">
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-if="loggedInUserId == currentUserId">
@@ -40,6 +40,10 @@
     </div>
 </nav>
 
+
+<div class="col-md-2 user-menu-btns visible-xs" ng-include src='"partials/profile/profileLeftMenu.html"'>
+    
+</div>
 <!-- <div class="jumbotron alert alert-dismissible inner-jumbotron shadow " id="no-border-round"
      role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
@@ -54,8 +58,8 @@
     </p>
 </div>
  -->
-<div class="col-md-12">
-    <div class="container col-md-12">
+<div class="col-md-12 col-xs-12">
+    <div class="container col-md-12 col-xs-12">
         <div class="row user-menu-container square">
             <!-- <div class="row cover-section custom-profile-covers" ng-controller="ProfileImageCrop">
                 <div class="col-md-4 small-cover-pic">
@@ -89,18 +93,18 @@
                          class="img-responsive thumbnail"/>
                 </div>
             </div> -->
-            <div class="col-md-12 user-details">
-                <div class="row coralbg white custom-profile-userpic">
-                    <div class="col-md-3 top-margin">
+            <div class="col-md-12 col-xs-12 no-padding user-details">
+                <div class="col-md-12 col-xs-12 no-padding coralbg white">
+                    <div class="col-md-3 col-xs-4 top-margin">
                         <div class="user-image biothumb">
-                            <img ng-src="{{profileImage}}" src="http://placehold.it/300x200"
-                                 class="img-responsive thumbnail" style="min-height: 200px;"/>
+                            <img ng-src="{{currentProfileImage}}" src="http://placehold.it/293x220"
+                                 class="img-responsive thumbnail" />
                         </div>
                     </div>
 
 
-                    <div class="col-md-9 no-pad">
-                        <div class="col-md-12 user-pad-profile custom-profile-user-details">
+                    <div class="col-md-9 col-xs-8 no-pad">
+                        <div class="user-pad-profile">
                         <!--name-->
                         <h3 style="text-transform: capitalize;">{{ firstname }} {{ lastname }}</h3>
                         <!--Location-->
@@ -114,25 +118,25 @@
                             </h4>
                         </div>
                         </div>
-                        <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
+                        <div class="row hidden-xs" ng-include='"partials/profile/userProfileCount.html"'></div>
                     </div>
                 </div>
-                <div class="col-md-12"  id="view">
+                <div class="col-md-12 col-xs-12"  id="view">
                     <h3>About Me</h3>
 
                     <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
                 </div>
             </div>
-            <div class="col-md-2 user-menu-btns"
+            <div class="col-md-2 user-menu-btns hidden-xs"
                  ng-include src='"partials/profile/profileLeftMenu.html"'>
 
             </div>
 
-            <div class="col-md-10 user-menu user-pad" ng-controller="trending">
+            <div class="col-md-10 col-xs-12 user-menu user-pad" ng-controller="trending">
                 <!-- <h3 style="font-size: 1.5em">
                     Recent activity
                 </h3> -->
-				<div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+				<div class="col-md-12 panel-heading  hidden-xs" style="padding-left: 0px;padding-right: 0px;">
 			        <div class="fragment">
 			            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
 			            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Recent activity</h4>
@@ -142,19 +146,24 @@
 			        </div>
 			    </div>
 
-                <div class="col-md-12 trending-section" ng-repeat="post in myposts ">
-                    <div class="col-md-12 zero-padding-left-right">
-                        <div class="col-md-1">
+                <div class="col-md-12 col-xs-12 trending-section" ng-repeat="post in myposts ">
+                    <div class="col-md-12 col-xs-12 zero-padding-left-right">
+                        <div class="times-ago col-md-2 col-xs-12 col-md-offset-5 text-right visible-xs">
+                            <h5>
+                                <time class="relative" without-suffix datetime="{{post.publish_date.date}}"></time>
+                            </h5>
+                        </div>
+                        <div class="col-md-1 col-xs-4">
                             <img ng-src="{{imagePath+'image/show/'+post.user.profile_image.large_image_url}}"
                                  alt=""
                                  class="img-thumbnail"/>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2 col-xs-8">
                             <h4 style="padding: 0px 0px 5px 2px">{{post.user.firstname}}&nbsp;{{post.user.lastname}}
                                 <small> says...</small>
                             </h4>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2 col-xs-12">
                             <select class="form-control" ng-hide="loggedInUser != post.user.id"
                                     id="sub-visibilities-type"
                                     ng-options="visibility as visibility.type for visibility in visibilties"
@@ -163,39 +172,39 @@
                                     ng-change="UpdateWoiceVisibility(post,selectedVisibility)">
                             </select>
                         </div>
-                        <div class="times-ago col-md-2 col-md-offset-5 text-right">
+                        <div class="times-ago col-md-2 col-xs-12 col-md-offset-5 text-right hidden-xs">
                             <h5>
                                 <time class="relative" without-suffix datetime="{{post.publish_date.date}}"></time>
                             </h5>
                         </div>
                     </div>
 
-                    <div class="col-md-12" ng-if="post.title != ''"><h4
+                    <div class="col-md-12 col-xs-12" ng-if="post.title != ''"><h4
                             style="color: #4cb1ca; font-weight: 100; font-size: 1.2em; text-align:justify;">
                         {{post.title}}</h4></div>
 
                     <!-- Images-->
                <div ng-if="post.images.length > 0" class="col-sm-12 col-xs-12 spec center-block reco-image-gallery">
                     <div class="col-lg-3 col-sm-6 col-xs-3" ng-repeat="image in post.images | slice:0:1">
-                        <a  href ng-click="openLightBox(post.images,$index)" class="thumbnail" style="min-height:116px;">
+                        <a  href ng-click="openLightBox(post.images,$index)" class="thumbnail">
                             <img ng-src="{{imagePath+'image/show/'+image.large_image_url}}"
                                  alt="125x125">
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 col-xs-3" ng-repeat="image in post.images | slice:1:2">
-                        <a  href ng-click="openLightBox(post.images,$index + 1)" class="thumbnail" style="min-height:116px;">
+                        <a  href ng-click="openLightBox(post.images,$index + 1)" class="thumbnail">
                             <img ng-src="{{imagePath+'image/show/'+image.large_image_url}}"
                                  alt="125x125">
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 col-xs-3" ng-repeat="image in post.images | slice:2:3">
-                        <a href ng-click="openLightBox(post.images,$index + 2)" class="thumbnail" style="min-height:116px;">
+                        <a href ng-click="openLightBox(post.images,$index + 2)" class="thumbnail">
                             <img ng-src="{{imagePath+'image/show/'+image.large_image_url}}"
                                  alt="125x125">
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 col-xs-3" ng-repeat="image in post.images | slice:3:4">
-                        <a href ng-click="openLightBox(post.images,$index + 3)" class="thumbnail" style="min-height:116px;">
+                        <a href ng-click="openLightBox(post.images,$index + 3)" class="thumbnail">
                             <img ng-if="post.images.length > 4" ng-src="{{imagePath+'image/show/'+image.large_image_url}}"
                                  alt="125x125" style="opacity:0.7">
                             <i class="custom-text-over-image" ng-if="post.images.length > 4">+{{post.images.length - 4}}</i>
@@ -207,15 +216,15 @@
 
                     <!--Brand and location div starts-->
                     <!--Both Brand and location / show this div-->
-                    <div class="col-md-12 zero-padding-left-right reco-brand-section"
+                    <div class="col-md-12 col-xs-12 zero-padding-left-right reco-brand-section"
                          ng-if="post.location != null && post.brand.id != 1">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-xs-4">
                             <img ng-src="{{imagePath+'image/show/'+ post.brand.image_name + '/24/24'}}"
                                  alt=""
                                  class="img-thumbnail"/>
                             <span style="color:#eb9c38">{{post.brand.title}}</span>
                         </div>
-                        <div class="col-md-6 col-md-offset-2 text-right">
+                        <div class="col-md-6 col-xs-8 col-md-offset-2 text-right">
                             <p>
                                 Location: <b>{{post.location.locality}} , {{post.location.city}},
                                 {{post.location.state}}</b>
@@ -224,10 +233,10 @@
                     </div>
 
                     <!-- Location only / show this div-->
-                    <div class="col-md-12 zero-padding-left-right reco-brand-section"
+                    <div class="col-md-12 col-xs-12 zero-padding-left-right reco-brand-section"
                          ng-if="post.brand.id == 1 && post.location != null">
                         <div class="col-md-6 col-md-offset-6 text-right">
-                            <p>
+                            <p class="custom-post-location">
                                 Location: <b>{{post.location.locality}} , {{post.location.city}},
                                 {{post.location.state}}</b>
                             </p>
@@ -235,9 +244,9 @@
                     </div>
 
                     <!-- Brand only / show this div-->
-                    <div class="col-md-12 zero-padding-left-right reco-brand-section"
+                    <div class="col-md-12 col-xs-12 zero-padding-left-right reco-brand-section"
                          ng-if="post.brand.id != 1 && post.brand != null && post.location == null">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-xs-12">
                             <img ng-src="{{imagePath+'image/show/'+ post.brand.image_name + '/24/24'}}"
                                  alt=""
                                  class="img-thumbnail"/>
@@ -246,40 +255,40 @@
                     </div>
                     <!--Brand and location div Ends-->
 
-                    <div class="col-md-12 zero-padding-left-right" ng-if="post.description != ''">
-                        <div class="col-md-12">
+                    <div class="col-md-12 col-xs-12 zero-padding-left-right" ng-if="post.description != ''">
+                        <div class="col-md-12 col-xs-12">
                             <p style="text-align:justify;">{{post.description}}</p>
                         </div>
                     </div>
-                    <div class="col-md-12 zero-padding-left-right reco-brand-section">
-                        <div class="col-md-2" ng-if="post.price_range != '' && post.price_range != null">
-                            <p>
+                    <div class="col-md-12 col-xs-12 zero-padding-left-right reco-brand-section">
+                        <div class="col-md-2 col-xs-4" ng-if="post.price_range != '' && post.price_range != null">
+                            <p class="custom-post-location">
                                 Price: &#8377; <b>{{post.price_range}}</b>
                             </p>
                         </div>
-                        <div class="col-md-4 col-md-offset-6 text-right"
+                        <div class="col-md-4 col-xs-8 col-md-offset-6 text-right"
                              ng-if="post.links.length > 0 && post.price_range != ''">
                             <span class="fa fa-link"></span><a target="_blank" href="{{post.links[0].url_link}}"><b
                                 style="color: #4cb1ca;">
                             read more</b></a>
                         </div>
-                        <div class="col-md-4 col-md-offset-8 text-right"
+                        <div class="col-md-4 col-xs-8 col-md-offset-8 text-right"
                              ng-if="post.links.length > 0 && post.price_range == ''">
                             <span class="fa fa-link"></span><a target="_blank" href="{{post.links[0].url_link}}"><b
                                 style="color: #4cb1ca;">
                             read more</b></a>
                         </div>
                     </div>
-                    <div class="col-md-12 reco-testimonial" ng-if="post.testimonial != '' && post.testimonial != null" style="text-align:justify;">
+                    <div class="col-md-12 col-xs-12 reco-testimonial" ng-if="post.testimonial != '' && post.testimonial != null" style="text-align:justify;">
                         &#34;<i> {{post.testimonial}} </i>&#34;
                     </div>
-                    <div class="col-md-12 no-right-pad">
-                        <div class="col-md-2 commentStyle">
+                    <div class="col-md-12 col-xs-12 no-right-pad">
+                        <div class="col-md-2 col-xs-12 commentStyle">
                             <span class="glyphicon glyphicon-comment"></span>
             <span style="font-size: 12px;">{{post.commentsCount}} <a href
                                                                      ng-click="LoadComments(post)">Comments</a></span>
                         </div>
-                        <div class="col-md-2 col-md-offset-2 rating-back">
+                        <div class="col-md-2 col-xs-12 col-md-offset-2 rating-back">
                             <div class="ratingStyle text-center" ng-app="Duo">
                                 <bold style="font-size: 12px">Grade It :</bold><span duo-stars
                                                                                      value="{{GetLevelsByUserId(post)}}"
@@ -298,30 +307,30 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-2 col-md-offset-2 rewoiceStyle">
+                        <div class="col-md-2 col-xs-12 col-md-offset-2 rewoiceStyle">
                             <span class="fa fa-share-square"></span>
                 <span style="font-size: 12px;">{{post.rewoicesCount}}
                     <a href ng-click="AddRewoiceForRecentActivity(post)">Restream</a>
                 </span>
                         </div>
-                        <div ng-if="post.post_type_id == 1" class="col-md-2 reco-tag">
+                        <div ng-if="post.post_type_id == 1" class="col-md-2 col-xs-12 reco-tag">
                             <bold style="font-size: 12px">Share/Ask</bold>
                         </div>
-                        <div ng-if="post.post_type_id == 2" class="col-md-2 generic-tag">
+                        <div ng-if="post.post_type_id == 2" class="col-md-2 col-xs-12 generic-tag">
                             <bold style="font-size: 12px">I Recommend</bold>
                         </div>
-                        <div ng-if="post.post_type_id == 3" class="col-md-2 finds-tag">
+                        <div ng-if="post.post_type_id == 3" class="col-md-2 col-xs-12 finds-tag">
                             <bold style="font-size: 12px">My Find</bold>
                         </div>
-                        <div ng-if="post.post_type_id == 4" class="col-md-2 caution-tag">
+                        <div ng-if="post.post_type_id == 4" class="col-md-2 col-xs-12 caution-tag">
                             <bold style="font-size: 12px">Be Cautious</bold>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-12">
+                <div class="col-md-12 col-xs-12">
                     <!--spinner-->
-                    <div class="col-md-12" style="height:150px;">
+                    <div class="col-md-12 col-xs-12" style="height:150px;">
                         <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false">
                         </span>
                     </div>
