--- a/public/app/partials/profile/mygroup.html
+++ b/public/app/partials/profile/mygroup.html
@@ -1,5 +1,5 @@
 <!-- Static navbar -->
-<nav class="navbar navbar-default" id="navContainer">
+<nav class="navbar navbar-default hidden-xs" id="navContainer">
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li>
@@ -38,11 +38,15 @@
     </div>
 </nav>
 
-<div class="col-md-12" ng-controller="profileCtrl">
+<div class="col-md-2 col-xs-12 user-menu-btns visible-xs"
+    ng-include src='"partials/profile/PromotionalToolMenu.html"'>
+</div>
+
+<div class="col-md-12 col-xs-12" ng-controller="profileCtrl">
     <div class="row user-menu-container square">
-        <div class="col-md-12 user-details">
-            <div class="row coralbg white custom-profile-userpic">
-                <div class="col-md-3 top-margin">
+        <div class="col-md-12 col-xs-12 no-padding user-details">
+            <div class="col-md-12 col-xs-12 coralbg white">
+                <div class="col-md-3 col-xs-4 top-margin">
                     <div class="user-image biothumb">
                         <img ng-src="{{currentProfileImage}}" src="http://placehold.it/293x220"
                              class="img-responsive thumbnail" />
@@ -50,7 +54,7 @@
                 </div>
 
 
-                <div class="col-md-9 no-pad">
+                <div class="col-md-9 col-xs-8 no-pad">
                     <div class="user-pad-profile">
                         <!--name-->
                         <h3 style="text-transform: capitalize;">{{ firstname }} {{ lastname }}</h3>
@@ -65,33 +69,32 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
+                    <div class="row hidden-xs" ng-include='"partials/profile/userProfileCount.html"'></div>
                 </div>
             </div>
 
-            <div class="col-md-12"  id="view">
+            <div class="col-md-12 col-xs-12"  id="view">
                 <h3>About Me</h3>
                 <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
             </div>
         </div>
 
         <!--breadcrumb-->
-        <div class="col-md-12" style="margin-top: 10px;" id="view">
-            <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
+        <div class="col-md-12 col-xs-12" style="margin-top: 10px;" id="view">
+            <ul class="breadcrumb" style="background: transparent; padding-left: 0px;font-size:12px;">
                 <li><a href="#home">Home</a> <span class="divider"></span></li>
-                <li><a href="#profile/myprofile/{{currentUserId}}">Profile</a></li>
                 <li><a href="#mystores/{{currentUserId}}">Promotional Tools</a></li>
                 <li class="active">Groups</li>
             </ul>
         </div>
         <!--breadcrumb ends-->
 
-        <div class="col-md-2 user-menu-btns"
+        <div class="col-md-2 user-menu-btns hidden-xs"
             ng-include src='"partials/profile/PromotionalToolMenu.html"'>
         </div>
 
         <!--For Member-->
-        <div class="col-md-10 user-menu user-pad" ng-show="Role != 1 && currentUserId == loggedInUserId">
+        <div class="col-md-10 col-xs-12 user-menu user-pad" ng-show="Role != 1 && currentUserId == loggedInUserId">
             <div class="col-md-12 col-xs-12">
                 <div class="col-md-12 col-xs-12 empty-section text-center">
                     <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
@@ -108,8 +111,8 @@
 
         <!--For Admin-->
         <div ng-show="Role == 1">
-            <div class="col-md-7 user-menu user-pad" ng-controller="groups">
-            	<div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+            <div class="col-md-7 col-xs-12 user-menu user-pad" ng-controller="groups">
+            	<div class="col-md-12 panel-heading hidden-xs" style="padding-left: 0px;padding-right: 0px;">
                     <div class="fragment">
                         <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
                         <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Groups</h4>
@@ -118,22 +121,25 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-12 panel-heading">
-                    <div class="col-md-2">
+                <div class="col-md-12 col-xs-12 panel-heading">
+                    <div class="col-md-2 col-xs-6 no-padding">
                         <h5>
                             Groups ({{myGroups.length}})
                         </h5>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-xs-6 pull-right visible-xs no-padding" ng-if="loggedInUserId == currentUserId">
+                        <a href ng-click="CreateGroup()" class="btn btn-primary"><span class="fa fa-plus"></span> Create Group</a>
+                    </div>
+                    <div class="col-md-3 col-xs-12 no-padding">
                         <input type="text" class="form-control" placeholder="search groups" ng-model="groupsearch"/>
                     </div>
-                    <div class="col-md-3 col-md-offset-4 pull-right" ng-if="loggedInUserId == currentUserId">
+                    <div class="col-md-3 col-md-offset-4 no-padding pull-right hidden-xs" ng-if="loggedInUserId == currentUserId">
                         <a href ng-click="CreateGroup()" class="btn btn-primary"><span class="fa fa-plus"></span> Create Group</a>
                     </div>
                 </div>
-                <div class="col-md-12 circle-section">
+                <div class="col-md-12 col-xs-12 circle-section">
                     <div class="row group-section">
-                        <div class="col-md-12 group-item" ng-repeat="group in myGroups | filter:groupsearch">
+                        <div class="col-md-12 col-xs-12 group-item" ng-repeat="group in myGroups | filter:groupsearch">
                             <div class="col-md-2" style="padding: 0px">
                                     <img ng-src="img/community-groups-header.jpg" class="img-thumbnail" ng-if="group.group_image == null"/>
                                     <img ng-src="{{service_url}}image/show/{{group.group_image.large_image_url}}" class="img-thumbnail" ng-if="group.group_image != null" alt="{{group.title}}"/>
@@ -160,23 +166,23 @@
             </div>
 
 
-            <div class="col-md-3" style="padding-right: 0px" ng-controller="groups" ng-if="loggedInUserId == currentUserId">
+            <div class="col-md-3 col-xs-12" ng-controller="groups" ng-if="loggedInUserId == currentUserId">
                 <!-- Friend requests -->
                 <div class="panel" style="background: #f7f7f7;">
                     <div class="panel-heading">
                         <h5 style="color: #337ab7; font-weight: 600 ;margin-top: 5px; margin-bottom: 5px">Group Requests ({{allGroupRequest.length}})</h5>
                     </div>
                     <ul class="list-group" ng-repeat="request in allGroupRequest">
-                        <li class="list-group-item col-sm-12">
-                            <div class="col-sm-8" style="padding-left: 0px; padding-right: 0px">
+                        <li class="list-group-item col-sm-12 col-xs-12">
+                            <div class="col-sm-8 col-xs-8" style="padding-left: 0px; padding-right: 0px">
                                 <!--<img ng-src="{{service_url+'image/show/'+request.profileImage1}}" class="img-thumbnail" style="width: 32px; height: 32px" alt=""/>-->
                                 <a href="#groups/{{request.group.id}}">{{request.group.title}}</a>
                                 <span><a href="#profile/{{request.group.owner.user_id}}">({{request.group.owner.firstname}} {{request.group.owner.lastname}})</a></span>
                             </div>
-                            <div class="col-sm-2 pull-right" style="padding-left: 0px; padding-right: 0px;">
+                            <div class="col-sm-2 col-xs-2 pull-right">
                                 <a href ng-click="SetRequest(request,true)"><span class="fa fa-check"></span></a>
                             </div>
-                            <div class="col-sm-2 pull-right" style="padding-left: 0px; padding-right: 0px">
+                            <div class="col-sm-2 col-xs-2 pull-right">
                                 <a href="" ng-click="SetRequest(request,false)"><span class="fa fa-times"></span></a>
                             </div>
                         </li>
@@ -185,7 +191,7 @@
             </div>
 
 
-            <div class="col-md-3" style="padding-right: 0px" ng-controller="groups" ng-if="loggedInUserId == currentUserId">
+            <div class="col-md-3 col-xs-12" ng-controller="groups" ng-if="loggedInUserId == currentUserId">
                 <!-- Friend requests -->
                 <div class="panel" style="background: #f7f7f7;">
                     <div class="panel-heading">
