--- a/public/app/profile.css
+++ b/public/app/profile.css
@@ -1,29 +1,9 @@
-.cover-section {
-margin-bottom: 4px;
-}
 .cover-section img {
     width: 100%;
 }
 
 .small-cover-pic {
     padding-right: 2px;
-}
-
-.small-cover-pic-top {
-    height: 220px;
-    overflow: hidden;
-}
-
-.small-cover-pic-bottom {
-    padding-top: 4px;
-    height: 220px;
-    overflow: hidden;
-}
-
-.large-cover-pic {
-    padding-left: 2px;
-    height: 440px;
-    overflow: hidden;
 }
 
 .square, .square .btn {
@@ -73,15 +53,7 @@ div.user-menu-container a, div.user-menu-container .btn  {
     transition: 1s ease;
 }
 
-div.user-menu-container .thumbnail {
-    width:100%;
-    min-height:220px;
-    border: 0px!important;
-    padding: 0px;
-    border-radius: 0;
-    border: 0px!important;
-    margin-bottom: 0px;
-}
+
 
 /* -- Vertical Button Group -- */
 div.user-menu-container .btn-group-vertical {
@@ -235,16 +207,8 @@ div.user-menu div.user-menu-content:not(.active){
     margin-bottom: 5px;
 }
 
-.user-pad-profile {
-    padding: 0px 25px;
-    background: #f7f7f7;
-    padding-bottom: 10px;
-    background-clip: padding-box;
-    min-height: 142px;
-}
-
 .user-pad {
-    padding: 0px 25px;
+    /*padding: 0px 16px;*/
     /*margin-bottom: 38px;*/
     background: #f7f7f7;
     padding-bottom: 20px;
@@ -267,11 +231,6 @@ div.user-menu div.user-menu-content:not(.active){
 
 .no-right-pad {
     padding-right: 0px;
-}
-
-.top-margin {
-    margin-top: 15px;
-    padding: 0px;
 }
 
 .user-details {
@@ -469,9 +428,94 @@ div.user-menu div.user-menu-content:not(.active){
 
 /* rectangular rating styles end*/
 
-/* -- media query for user profile image -- */
+/* -- media query for mobiles-- */
 @media (max-width: 767px) {
-    .user-image {
-        max-height: 400px;
+
+    .cover-section {
+    margin-bottom: 4px;
+    padding:5px;
+    }
+
+    div.user-menu-container .thumbnail {
+    width:100%;
+    border: 0px!important;
+    padding: 0px;
+    border-radius: 0;
+    border: 0px!important;
+    margin-bottom: 0px;
+    }
+    .small-cover-pic-top {
+    overflow: hidden;
+    }
+    .small-cover-pic-bottom {
+    padding-top: 3px;
+    overflow: hidden;
+    }
+    .large-cover-pic {
+    padding-left: 2px;
+    overflow: hidden;
+    }
+    .user-details
+    {
+        padding-left:4px;
+        padding-right:4px;
+    }
+    .user-pad-profile {
+    padding: 0px 16px;
+    background: #f7f7f7;
+    padding-bottom: 10px;
+    background-clip: padding-box;
+    }
+    .user-pad-profile h3,h4{
+    font-size:14px;
+    }
+    .top-margin {
+    margin-top: 5px;
+    padding: 0px;
+    }
+}
+
+
+/* -- media query for desktops-- */
+@media (min-width: 767px) {
+    .cover-section {
+    margin-bottom: 4px;
+    padding:0px;
+    }
+
+    div.user-menu-container .thumbnail {
+    width:100%;
+    min-height:220px;
+    border: 0px!important;
+    padding: 0px;
+    border-radius: 0;
+    border: 0px!important;
+    margin-bottom: 0px;
+    background-color: transparent;
+    }
+    .small-cover-pic-top {
+    height: 220px;
+    overflow: hidden;
+    }
+    .small-cover-pic-bottom {
+    padding-top: 4px;
+    height: 220px;
+    overflow: hidden;
+    }
+    .large-cover-pic {
+    padding-left: 2px;
+    height: 440px;
+    overflow: hidden;
+    }
+    .user-pad-profile {
+        padding: 0px 25px;
+        background: #f7f7f7;
+        padding-bottom: 10px;
+        background-clip: padding-box;
+        min-height: 142px;
+    }
+    .top-margin {
+    margin-top: 15px;
+    padding: 0px;
     }
 }
