--- a/public/app/woice.css
+++ b/public/app/woice.css
@@ -510,8 +510,8 @@ ul.circles-details-list li a .circle-info h4 {
 .event-list .box .detail {
     background: #fff;
     color: #6e6a65;
-    font-size: 15px;
-    height: 180px;
+    font-size: 12px;
+    height: 150px;
     padding: 10px 18px;
     position: relative;
     -webkit-box-shadow: 0 -2px 2px rgba(0,0,0,0.1);
@@ -596,7 +596,7 @@ ul.circles-details-list li a .circle-info h4 {
 }
 
 .event-list h1 {
-    font-size: 20px;
+    font-size: 14px;
 }
 
 .event-info .box .detail .tease {
@@ -735,13 +735,6 @@ ul.circles-details-list li a .circle-info h4 {
 }
 
 /* Blog section style start */
-
-.blog-post-items .post-item {
-    box-shadow: 0px 1px 1px 1px #e8eef3;
-    border-bottom: 1px solid #e8eef3;
-    margin-bottom: 20px;
-}
-
 .post-item .post-thumbnail {
     text-align: center;
 }
@@ -767,16 +760,6 @@ ul.circles-details-list li a .circle-info h4 {
     font-size: 18px;
     margin-top: 0px;
     color: #2d9db8;
-}
-
-.blog-post-items .post-item .post-content {
-    margin: 0 25px;
-    padding: 15px;
-    margin-top: -15px;
-    background: #fff;
-    z-index: 1;
-    position: relative;
-    border-radius: 2px;
 }
 
 .blog-post-items .post-item .post-content .post-meta, .wrap-post-items .post-content .post-meta a {
@@ -1118,3 +1101,41 @@ ul.circles-details-list li a .circle-info h4 {
 .fragment a { cursor: pointer; text-decoration: none;}
 .fragment p {text-align: justify; cursor: default;margin-bottom: 5px; font-family: 'Raleway', sans-serif;}
 /* Description div style starts */
+
+
+/*For mobiles*/
+@media only screen and (max-width : 767px) {
+    .blog-post-items .post-item {
+    box-shadow: 0px 1px 1px 1px #e8eef3;
+    border-bottom: 1px solid #e8eef3;
+    margin-bottom: 20px;
+    padding:0px;
+    }
+    .blog-post-items .post-item .post-content {
+    padding: 15px;
+    font-size: 12px;
+    background: #fff;
+    z-index: 1;
+    position: relative;
+    border-radius: 2px;
+    }
+}
+
+
+/*for Desktops*/
+@media (min-width: 767px) {
+    .blog-post-items .post-item {
+    box-shadow: 0px 1px 1px 1px #e8eef3;
+    border-bottom: 1px solid #e8eef3;
+    margin-bottom: 20px;
+    }
+    .blog-post-items .post-item .post-content {
+    margin: 0 25px;
+    padding: 15px;
+    margin-top: -15px;
+    background: #fff;
+    z-index: 1;
+    position: relative;
+    border-radius: 2px;
+    }
+}
